[IDEATHESIS-35] fix: resolve bugs with constraint error on subdivision