@@ -213,8 +213,8 @@ public class BatchConfig {
                 .faultTolerant()
                 .skip(DuplicateKeyException.class)
                 .skipLimit(100)
-                .retryLimit(3)
                 .retry(OptimisticLockingFailureException.class)
+                .retryLimit(3)
                 .listener(stepExecutionLogger)
                 .build();
     }
@@ -274,12 +274,18 @@ public class BatchConfig {
     @StepScope
     public ItemWriter<Employee> employeeWriter() {
         return items -> {
-            List<Employee> employees = new ArrayList<>(items.getItems());
-
-            userRepository.saveAll(employees.stream()
-                    .map(Employee::getUser)
-                    .collect(Collectors.toList()));
-
+            List<Employee> employees = new ArrayList<>();
+            for (Employee item : items.getItems()) {
+                UUID guid = item.getGuid();
+                Employee existing = employeeRepository.findByGuid(guid).orElse(null);
+                if (existing != null) {
+                    // Обновляем существующую запись
+                    item.setGuid(existing.getGuid());
+                    item.getUser().setGuid(existing.getUser().getGuid());
+                }
+                employees.add(item);
+            }
+            userRepository.saveAll(employees.stream().map(Employee::getUser).toList());
             employeeRepository.saveAll(employees);
         };
     }
@@ -306,7 +312,6 @@ public class BatchConfig {
         for (EmployeeEmploymentDTO dto : dtos) {
             EmployeeEmployment newEmployment = buildEmploymentFromDTO(dto, employee);
 
-            // Поиск существующей записи с теми же ключевыми полями
             Optional<EmployeeEmployment> existing = currentEmployments.stream()
                     .filter(e -> employmentEqualsIgnoreId(e, newEmployment))
                     .findFirst();
@@ -314,7 +319,6 @@ public class BatchConfig {
             if (existing.isPresent()) {
                 EmployeeEmployment existingEmployment = existing.get();
                 if (!employmentEqualsFull(existingEmployment, newEmployment)) {
-                    // Обновляем поля, если что-то изменилось
                     existingEmployment.setJobState(newEmployment.getJobState());
                     existingEmployment.setJobTitle(newEmployment.getJobTitle());
                     existingEmployment.setStaffCategory(newEmployment.getStaffCategory());
@@ -323,14 +327,24 @@ public class BatchConfig {
                 }
                 updatedEmployments.add(existingEmployment);
             } else {
-                // Такой записи нет — добавляем новую
                 updatedEmployments.add(newEmployment);
             }
         }
 
-        // Обновляем сет трудоустройств у сотрудника
         currentEmployments.clear();
         currentEmployments.addAll(updatedEmployments);
+    }
+
+    private boolean employmentEqualsIgnoreId(EmployeeEmployment a, EmployeeEmployment b) {
+        return Objects.equals(a.getJobTitle(), b.getJobTitle()) &&
+                Objects.equals(a.getStaffCategory(), b.getStaffCategory()) &&
+                Objects.equals(a.getEmploymentType(), b.getEmploymentType()) &&
+                Objects.equals(a.getSubdivision(), b.getSubdivision());
+    }
+
+    private boolean employmentEqualsFull(EmployeeEmployment a, EmployeeEmployment b) {
+        return employmentEqualsIgnoreId(a, b) &&
+                Objects.equals(a.getJobState(), b.getJobState());
     }
 
     private EmployeeEmployment buildEmploymentFromDTO(EmployeeEmploymentDTO dto, Employee employee) {
@@ -344,20 +358,6 @@ public class BatchConfig {
         return employment;
     }
 
-    // Сравнение по всем полям, кроме id
-    private boolean employmentEqualsIgnoreId(EmployeeEmployment a, EmployeeEmployment b) {
-        return Objects.equals(a.getJobTitle(), b.getJobTitle()) &&
-                Objects.equals(a.getStaffCategory(), b.getStaffCategory()) &&
-                Objects.equals(a.getEmploymentType(), b.getEmploymentType()) &&
-                Objects.equals(a.getSubdivision(), b.getSubdivision());
-    }
-
-    // Полное сравнение, включая jobState
-    private boolean employmentEqualsFull(EmployeeEmployment a, EmployeeEmployment b) {
-        return employmentEqualsIgnoreId(a, b) &&
-                Objects.equals(a.getJobState(), b.getJobState());
-    }
-
     private Set<EmployeeEmployment> processEmployments(List<EmployeeEmploymentDTO> dtos, Employee employee) {
         return dtos.stream().map(empDto -> {
             EmployeeEmployment employment = new EmployeeEmployment();
@@ -369,6 +369,24 @@ public class BatchConfig {
             employment.setJobState(empDto.getJobState());
             return employment;
         }).collect(Collectors.toSet());
+    }
+
+    private Employee saveOrUpdateEmployee(EmployeeDTO dto) {
+        UUID guid = UUID.fromString(dto.getGuid());
+        Employee employee = employeeRepository.findByGuid(guid)
+                .orElse(new Employee());
+
+        // Обновляем поля
+        employee.setGuid(guid);
+        employee.setFullName(dto.getFullName());
+        employee.setSurname(dto.getSurname());
+        employee.setEmail(StringUtils.hasText(dto.getMail()) ? dto.getMail() : null);
+        employee.setDateOfBirth(parseDate(dto.getDateOfBirth()));
+
+        // Обновляем трудоустройства
+        updateEmployeeEmployments(employee, dto.getEmployeeEmployments());
+
+        return employeeRepository.save(employee);
     }
 
     // Методы кэширования для новых справочников
@@ -396,7 +414,7 @@ public class BatchConfig {
     private Subdivision getCachedSubdivision(String name, String guid) {
         if (name == null || guid == null) return null;
         return subdivisionCache.computeIfAbsent(guid,
-                key -> subdivisionRepository.findByGuid(UUID.fromString(guid))
+                key -> subdivisionRepository.findByName(name)
                         .orElseGet(() -> subdivisionRepository.save(new Subdivision(name, UUID.fromString(guid)))));
     }
 
